изменил hard skills

--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
         К задачам отношусь с энтузиазмом и позитивом, как в жизни так и в процессе тестирования!
         <br>
         <br> Мои инстументы и технологии:</br>
-        <br>•Bug Tracker - Test Rail</br>
+        <br>•Bug Tracker - Jira</br>
         <br>•Базы данных - MySQL</br>
         <br>•Web - HTML/CSS/JS/Devtools</br>
         <br>•Sniffer - Charles</br>
-        <br>•Test Case - Qase.IO</br>
+        <br>•Test Case - Test Rail</br>
         <br>•API - Postman</br>
          <br>Пишите для сотрудничества:</br>
        </p>
