Revert "Поменял фото 3.0"

--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
        <p class="hero__description">
         К задачам отношусь с энтузиазмом и позитивом, как в жизни так и в процессе тестирования!
         <br>
-        <br> Мой стэк:</br>
+        <br> Мои инстументы и технологии:</br>
         <br>•Bug Tracker - Jira</br>
         <br>•Базы данных - MySQL</br>
-        <br>•Web - Devtools</br>
+        <br>•Web - HTML/CSS/JS/Devtools</br>
         <br>•Sniffer - Charles</br>
         <br>•Test Case - Test Rail</br>
         <br>•API - Postman</br>
@@ -63,7 +63,7 @@
        </div>
     </div>
     <div class="hero__box">
-      <img class="hero__box-img" src="My.png" alt="man">
+      <img class="hero__box-img" src="my.jpg" alt="man">
     </div>
   </div>
 </div>
