--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
        <p class="hero__description">
         К задачам отношусь с энтузиазмом и позитивом, как в жизни так и в процессе тестирования!
         <br>
-        <br> Мой стэк:</br>
+        <br>Мой стэк:</br>
         <br>•Bug Tracker - Jira</br>
         <br>•Базы данных - MySQL</br>
         <br>•Web - Devtools</br>
@@ -63,7 +63,7 @@
        </div>
     </div>
     <div class="hero__box">
-      <img class="hero__box-img" src="My.png" alt="man">
+      <img class="hero__box-img" src="My.jpg" alt="man">
     </div>
   </div>
 </div>
