--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
        </div>
     </div>
     <div class="hero__box">
-      <img class="hero__box-img" src="my.jpg" alt="man">
+      <img class="hero__box-img" src="My.jpg" alt="man">
     </div>
   </div>
 </div>
